<resources>

    <string name="app_name">WhatToEat2</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Tab Title -->
    <string name="tab_title_home">Home</string>
    <string name="tab_title_restaurants">Restaurants</string>
    <string name="tab_title_groups">Groups</string>

    <string name="dialog_add_restaurant_name">Restaurant Name</string>
    <string name="dialog_add_restaurant_number">Restaurant Number</string>

    <string name="dialog_add_group_name">Group Name</string>
    <string name="dialog_add_group_number">Group Number</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

</resources>
